--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.9.16",
-    "socket-io": "^1.0.0"
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
